--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,9 +13,9 @@
             ->headTitle(ucfirst($request->getControllerName()))
             ->setSeparator(' - ')
             ->headTitle('SMKN 4 Bandung');
-    
 
-    $this
+
+    echo $this
             ->minifyHeadLink()
             ->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css'))
             ->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css'))
@@ -23,7 +23,7 @@
             ->appendStylesheet($this->baseUrl('lib/font-awesome/css/font-awesome.css'))
             ->appendStylesheet($this->baseUrl('css/front_layout.css'))
             ->appendStylesheet($this->baseUrl('lib/jCarousel/skins/tango/skin.css'));
-    $this
+    echo $this
             ->minifyHeadScript()
             ->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js'))
             ->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js'))
@@ -104,20 +104,37 @@
 
               <ul class="nav pull-right">
                 <li id="fat-menu" class="dropdown">
-                  <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-lock"></i> Login <b class="caret"></b></a>
-                  <form action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'login')); ?>" class="login dropdown-menu" method="post" autocomplete="off">
-                    <div>
-                      <input type="text" placeholder="Nama Pengguna" name="username"/>
-                    </div>
-                    <div>
-                      <input type="password" name="password" id="" placeholder="Kata Sandi"/>
-                    </div>
-                    <label for="rememberme" class="checkbox pull-left">
-                      <input type="checkbox" name="" id="rememberme" />
-                      Ingatkan saya
-                    </label>
-                    <button class="btn btn-info pull-right">Masuk</button>
-                  </form>
+                  <?php
+                  if (Zend_Auth::getInstance()->hasIdentity()
+                          && $user = Zend_Auth::getInstance()->getIdentity()):
+                    ?>
+                    <a href="#" id="drop3" 
+                       role="button" class="dropdown-toggle" 
+                       data-toggle="dropdown">
+                         <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 18, 18, 100, ''); ?>
+                      egisolehhasdi <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'logout', 'module' => 'admin'), null, true); ?>">
+                          <i class="icon-off"></i>&nbsp;Keluar</a>
+                      </li>
+                    </ul>
+                  <?php else: ?>
+                    <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-lock"></i> Login <b class="caret"></b></a>
+                    <form action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'login')); ?>" class="login dropdown-menu" method="post" autocomplete="off">
+                      <div>
+                        <input type="text" placeholder="Nama Pengguna" name="username"/>
+                      </div>
+                      <div>
+                        <input type="password" name="password" id="" placeholder="Kata Sandi"/>
+                      </div>
+                      <label for="rememberme" class="checkbox pull-left">
+                        <input type="checkbox" name="" id="rememberme" />
+                        Ingatkan saya
+                      </label>
+                      <button class="btn btn-info pull-right">Masuk</button>
+                    </form>
+                  <?php endif; ?>
                 </li>
               </ul>
 
