--- a/application/modules/admin/views/scripts/jobs/create.phtml
+++ b/application/modules/admin/views/scripts/jobs/create.phtml
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <h3>Posting Lowongan Pekerjaan</h3>
+  <h3>Tambah Lowongan Pekerjaan</h3>
 </div>
 <div class="row-fluid">
   <?php echo $this->render('jobs/form.phtml'); ?>
