--- a/application/modules/admin/views/scripts/jobs/index.phtml
+++ b/application/modules/admin/views/scripts/jobs/index.phtml
@@ -73,7 +73,7 @@
               <?php
               echo $this->formText('filter[position]', $this->filter['position'], array(
                   'class' => 'span12',
-                  'placeholder' => 'Posisi pekerjaan...'
+                  'placeholder' => 'Posisi pekerjaan'
               ));
               ?>
             </th>
@@ -81,7 +81,7 @@
               <?php
               echo $this->formText('filter[company]', $this->filter['company'], array(
                   'class' => 'span12',
-                  'placeholder' => 'Nama perusahaan...'
+                  'placeholder' => 'Nama perusahaan'
               ));
               ?>
             </th>
