--- a/application/modules/admin/views/scripts/polling/create.phtml
+++ b/application/modules/admin/views/scripts/polling/create.phtml
@@ -1,6 +1,6 @@
 <div class="row-fluid">
   <h3>Tambah Polling</h3>
-  <h5>Isi Dengan Pertanyaan Dan Minimal 2 Jawaban</h5>
+  <h5>Isi dengan pertanyaan dan beberapa pilihan jawaban (minimal 2 pilihan)</h5>
 </div>
 <div class="row-fluid">
   <?php echo $this->form; ?>
