--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -15,7 +15,7 @@
             ->headTitle('SMKN 4 Bandung');
 
 
-    echo $this
+    $this
             ->minifyHeadLink()
             ->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap.css'))
             ->appendStylesheet($this->baseUrl('lib/bootstrap/css/bootstrap-responsive.css'))
@@ -23,7 +23,7 @@
             ->appendStylesheet($this->baseUrl('lib/font-awesome/css/font-awesome.css'))
             ->appendStylesheet($this->baseUrl('css/front_layout.css'))
             ->appendStylesheet($this->baseUrl('lib/jCarousel/skins/tango/skin.css'));
-    echo $this
+    $this
             ->minifyHeadScript()
             ->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js'))
             ->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js'))
@@ -88,31 +88,17 @@
             </a>
             <div class="nav-collapse in collapse">
               <?php echo $menu; ?>
-              <!--<ul class="nav">-->
-              <!--                <li class="active">
-                                <a href="#">
-                                  <i class="icon-home icon-white"></i>
-                                  Beranda
-                                </a>
-                              </li>
-                              <li><a href="<?php echo $this->url(array('controller' => 'profil', 'action' => 'index')); ?>">Profil</a></li>
-                              <li><a href="#">Kegiatan Sekolah</a></li>
-                              <li><a href="#">Informasi</a></li>
-                              <li><a href="#">Galeri</a></li>
-                              <li><a href="#">Buku Tamu</a></li>-->
-              <!--</ul>-->
-
               <ul class="nav pull-right">
-                <li id="fat-menu" class="dropdown">
+                <li class="dropdown">
                   <?php
                   if (Zend_Auth::getInstance()->hasIdentity()
                           && $user = Zend_Auth::getInstance()->getIdentity()):
                     ?>
-                    <a href="#" id="drop3" 
-                       role="button" class="dropdown-toggle" 
+                    <a href="#"
+                       class="dropdown-toggle" 
                        data-toggle="dropdown">
                          <?php echo $this->thumbnail('avatar', $user->avatar, 'no-avatar.jpg', 18, 18, 100, ''); ?>
-                      egisolehhasdi <b class="caret"></b></a>
+                      <?php echo $user->username; ?> <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li>
                         <a href="<?php echo $this->url(array('controller' => 'user', 'action' => 'logout', 'module' => 'admin'), null, true); ?>">
@@ -120,8 +106,12 @@
                       </li>
                     </ul>
                   <?php else: ?>
-                    <a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-lock"></i> Login <b class="caret"></b></a>
-                    <form action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'login')); ?>" class="login dropdown-menu" method="post" autocomplete="off">
+                    <a href="#"
+                       class="dropdown-toggle"
+                       data-toggle="dropdown">
+                      <i class="icon-lock"></i> Login <b class="caret"></b></a>
+                    <form action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'login')); ?>" 
+                          class="login dropdown-menu" method="post" autocomplete="off">
                       <div>
                         <input type="text" placeholder="Nama Pengguna" name="username"/>
                       </div>
