--- a/application/views/scripts/article/view.phtml
+++ b/application/views/scripts/article/view.phtml
@@ -15,19 +15,18 @@ $this->minifyHeadLink()
             <?php echo Date('j M Y', strtotime($this->article['created_on'])); ?>
             <?php echo Date('H:i', strtotime($this->article['created_on'])); ?>
           </cite>
-          <div class="pull-right">
-            <i class="icon-eye-open"></i> <?php echo $this->article['views']; ?> &nbsp;&nbsp;
-            <i class="icon-thumbs-up"></i> <?php echo $this->article['likes']; ?> &nbsp;&nbsp;
-            <i class="icon-comments"></i> <?php echo rand(0, 1000) ?> &nbsp;&nbsp;
-          </div>
         </small>
       </blockquote>
       <?php echo $this->article['content']; ?>
-      <?php if (null !== $this->article['tags']): ?>
-        <i class="icon-tags"></i>&nbsp;<?php echo $this->tags($this->article['tags']); ?>
-      <?php endif; ?>
-
-      <hr id="comment"/>
+      <br id="comment"/>
+      <ul class="unstyled inline well" style="border-radius: 0;padding: 5px;">
+        <li><i class="icon-eye-open"></i> <?php echo $this->article['views']; ?> &nbsp;&nbsp;</li>
+        <li><i class="icon-thumbs-up"></i> <?php echo $this->article['likes']; ?> &nbsp;&nbsp;</li>
+        <li><i class="icon-comments"></i> <?php echo rand(0, 1000) ?> &nbsp;&nbsp;</li>
+        <?php if (null !== $this->article['tags']): ?>
+          <li><i class="icon-tags"></i>&nbsp;<?php echo $this->tags($this->article['tags']); ?></li>
+        <?php endif; ?>        
+      </ul>
 
       <?php if ($this->auth->hasIdentity() && $user = $this->auth->getIdentity()): ?>
         <form action="<?php echo $this->url(); ?>#comment" method="post" id="comment-form">
@@ -57,7 +56,6 @@ $this->minifyHeadLink()
       <?php endif; ?>
 
       <?php echo $this->paginationControl($this->comments, 'sliding', 'pagination_control.phtml'); ?>
-
       <ul id="comment" class="media-list">
         <?php foreach ($this->comments as $index => $comment): ?>
           <li class="media">
@@ -78,7 +76,7 @@ $this->minifyHeadLink()
           </li>
         <?php endforeach; ?>
       </ul>
-
+      <?php echo $this->paginationControl($this->comments, 'sliding', 'pagination_control.phtml'); ?>
     </div>
   </div>
   <div class="span4 sidebar well">
