--- a/application/views/scripts/prakerin/index.phtml
+++ b/application/views/scripts/prakerin/index.phtml
@@ -3,22 +3,19 @@ $key = "AIzaSyCTNj8ia2gmUviCAL5Beyrip_OQSI_hJdw";
 $sensor = "false";
 $libraries = "places";
 
-$this->minifyHeadScript()->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}", 'text/javascript', array('minify_disabled' => true, 'minify_split_before' => true));
+$this->minifyHeadLink()
+->appendStylesheet($this->baseUrl('lib/jquery-ui/css/smoothness/jquery-ui-1.8.20.custom.css'))
+->appendStylesheet($this->baseUrl('lib/multiselect/jquery.multiselect.css'))
+->appendStylesheet($this->baseUrl('css/application/prakerin.css'));
 
 $this->minifyHeadScript()
-        ->prependFile($this->baseUrl('js/prakerin_map.js'))
-        ->appendFile($this->baseUrl('js/markerwithlabel.js'))
-        ->appendFile($this->baseUrl('js/application/prakerin.js'));
+->prependFile("https://maps.googleapis.com/maps/api/js?key={$key}&sensor={$sensor}&libraries={$libraries}", 'text/javascript', array('minify_disabled'     => true, 'minify_split_before' => true))
+->appendFile($this->baseUrl('lib/jquery-ui/jquery-ui-1.8.23.custom.min.js'))
+->appendFile($this->baseUrl('lib/multiselect/jquery.multiselect.js'))
+->appendFile($this->baseUrl('js/prakerin_map.js'))
+->appendFile($this->baseUrl('js/markerwithlabel.js'))
+->appendFile($this->baseUrl('js/application/prakerin.js'));
 ?>
 <div class="main row-fluid">
-  <div id="map-canvas" style="height: 500px;width: 100%;"></div>
+    <div id="map-canvas" style="height: 500px;width: 100%;"></div>
 </div>
-<!--<div class="row-fluid">
-  <div class="span8">
-    <div class="container-fluid">
-      <p>Lorem Ipsum</p>
-    </div>
-  </div>
-  <div class="span4">
-  </div>
-</div>-->
