--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -89,6 +89,18 @@
                         </a>
                         <div class="nav-collapse in collapse">
                             <?php echo $menu; ?>
+<!--                            <ul class="nav">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <i class="icon-folder-close"></i> Konten <i class="caret"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#"><i class="icon-info-sign"></i>&nbsp;Pengumuman</a></li>
+                                        <li><a href="#"><i class="icon-calendar"></i>&nbsp;Agenda</a></li>
+                                        <li><a href="#"><i class="icon-briefcase"></i>&nbsp;Lowongan Kerja</a></li>
+                                    </ul>
+                                </li>
+                            </ul>-->
                             <ul class="nav pull-right">
                                 <li class="dropdown">
                                     <?php
